--- a/BlogHealth/Views/Shared/_Layout.cshtml
+++ b/BlogHealth/Views/Shared/_Layout.cshtml
@@ -13,6 +13,7 @@
     <link href="~/HomeAsset/font/font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet" />
 </head>
 <body>
+    test
     <!--Navbar-->
     <nav class="navbar navbar-expand-lg navbar-light white black-text " style="font-weight:400">
 
