--- a/BlogHealth/HomeAsset/css/style.css
+++ b/BlogHealth/HomeAsset/css/style.css
@@ -19176,7 +19176,7 @@ table.table-sm td, table.table-sm th {
     margin-left: 1rem;
     margin-right: 1rem;
     margin-bottom: -20px;
-    background-color: #2BBBAD;
+    background-color: #fff;
     z-index: 2;
     position: relative;
     border-radius: 2px
@@ -19188,12 +19188,12 @@ table.table-sm td, table.table-sm th {
 
     .nav-tabs .nav-link {
         border: 0;
-        color: #fff
+        color: #00C851;
     }
 
         .nav-tabs .nav-item.open .nav-link, .nav-tabs .nav-link.active {
-            background-color: rgba(255,255,255,.2);
-            color: #fff;
+            background-color: #eeeeee ;/*rgba(255,255,255,.2);*/
+            color: #00C851;
             -webkit-transition: all 1s;
             transition: all 1s;
             border-radius: 2px
