--- a/BlogHealth/Views/Shared/_Layout.cshtml
+++ b/BlogHealth/Views/Shared/_Layout.cshtml
@@ -13,7 +13,6 @@
     <link href="~/HomeAsset/font/font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet" />
 </head>
 <body>
-    test
     <!--Navbar-->
     <nav class="navbar navbar-expand-lg navbar-light white black-text " style="font-weight:400">
 
@@ -76,6 +75,6 @@
     <script src="~/HomeAsset/js/popper.min.js"></script>
     <script src="~/HomeAsset/js/bootstrap.js"></script>
     <script src="~/HomeAsset/js/mdb.js"></script>
-    
+    @RenderSection("js")
 </body>
 </html>
