--- a/BlogHealth/Views/Home/Index.cshtml
+++ b/BlogHealth/Views/Home/Index.cshtml
@@ -2,12 +2,20 @@
 @{
     ViewBag.Title = "Index";
 }
-
-<div class="row mt-3">
-    <div class="col-xl-3 hidden-sm hidden-md ">
+@section css{
+<style>
+    .sticky:before,
+    .sticky:after {
+        content: '';
+        display: table;
+    }
+    </style>
+}
+<div class="row mt-3 " >
+    <div class="col-xl-3 hidden-sm hidden-md leftSidebar" id="sidebar">
         @*<h4 class="text-success section-heading h4">Bài viết nổi bật</h4>*@
         <div class="row">
-            <div class="col-xl-12 mb-1">
+            <div class="col-xl-12 mb-1 ">
                 <ul class="nav nav-tabs nav-justified p-2 white">
                     <li class="nav-item  waves-effect waves-dark m-0">
                         <a class="nav-link active p-1 blue darken-1" data-toggle="tab" href="#panelHot" role="tab">
@@ -222,7 +230,7 @@
 
 
     </div>
-    <div class="col-xl-6">
+    <div class="col-xl-6" id="MainContent">
         @*<h4 class="text-success section-heading h4">Bài viết</h4>*@
         <ul class="nav nav-tabs nav-justified p-2 white">
             <li class="nav-item  waves-effect waves-dark m-0">
@@ -396,17 +404,14 @@
 
 
     </div>
-    <div class="col-xl-3">
+    <div class="col-xl-3 rightSidebar">
         <div class="row">
             <div class="col-xl-12 mb-2">
                 <ul class="nav nav-tabs nav-justified p-2 white">
                     <li class="nav-item  waves-effect waves-dark m-0">
                         <a class="nav-link active p-1 blue darken-1" data-toggle="tab" href="#panelHot" role="tab">
                             <h5 class="text-white  section-heading h5 m-0">
-                               
                                     <i class="fa fa-eye"></i>&nbsp; Xem nhiều nhất
-                                
-
                             </h5>
                         </a>
                     </li>
@@ -669,6 +674,11 @@
 
                             </h5>
                         </a>
+                        <div class="row">
+                            <div class="progress primary-color-dark">
+                                <div class="indeterminate"></div>
+                            </div>
+                        </div>
                     </li>
 
                 </ul>
@@ -994,7 +1004,20 @@
 @section js{
     <script>
         $(function () {
-            $('[data-toggle="tooltip"]').tooltip()
-        })
+            $('[data-toggle="tooltip"]').tooltip();
+            $('.leftSidebar, .rightSidebar').theiaStickySidebar({
+                'additionalMarginTop': 0,
+                'containerSelector': '#MainContent',
+                'sidebarBehavior': 'stick-to-top',
+            });
+            //$(".leftSidebar").stick_in_parent();
+            
+            //var elements = $('.leftSidebar');
+            //Stickyfill.add(elements);
+            //var sidebar = document.getElementById('sidebar');
+            //Stickyfill.add(sidebar);
+            //$('.leftSidebar').stickyfloat({ duration: 400 });
+        });
+       
     </script>
 }
