--- a/BlogHealth/Views/Home/Index.cshtml
+++ b/BlogHealth/Views/Home/Index.cshtml
@@ -1001,6 +1001,218 @@
         </div>
     </div>
 </div>
+<div class="row col-lg-8">
+
+    <!--Grid column-->
+    <div class="col-lg-4 col-md-6 mb-r">
+
+        <!--Card-->
+        <div class="card card-cascade narrower">
+
+            <!--Card image-->
+            <div class="view overlay hm-white-slight z-depth-1">
+                <img src="https://mdbootstrap.com/img/Photos/Horizontal/E-commerce/Vertical/img%20(35).jpg" class="img-fluid" alt="">
+                <a>
+                    <div class="mask waves-effect waves-light"></div>
+                </a>
+            </div>
+            <!--Card image-->
+            <!--Card content-->
+            <div class="card-body text-center no-padding">
+                <!--Category & Title-->
+                <a href="" class="text-muted"><h5>Shorts</h5></a>
+                <h4 class="card-title"><strong><a href="">Denim shirt</a></strong></h4>
+
+                <!--Rating-->
+                <ul class="rating">
+                    <li><i class="fa fa-star"></i></li>
+                    <li><i class="fa fa-star"></i></li>
+                    <li><i class="fa fa-star"></i></li>
+                    <li><i class="fa fa-star"></i></li>
+                    <li><i class="fa fa-star-o"></i></li>
+                </ul>
+
+                <!--Description-->
+                <p class="card-text">
+                    Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam.
+                </p>
+
+                <!--Card footer-->
+                <div class="card-footer">
+                    <span class="left">49$</span>
+                    <span class="right">
+                        <a data-toggle="tooltip" data-placement="top" title="" data-original-title="Add to Cart"><i class="fa fa-shopping-cart"></i></a>
+                        <a data-toggle="tooltip" data-placement="top" title="" data-original-title="Share"><i class="fa fa-share-alt"></i></a>
+                        <a class="active" data-toggle="tooltip" data-placement="top" title="" data-original-title="Added to Wishlist"><i class="fa fa-heart"></i></a>
+                    </span>
+                </div>
+
+            </div>
+            <!--Card content-->
+
+        </div>
+        <!--Card-->
+
+    </div>
+    <!--Grid column-->
+    <!--Grid column-->
+    <div class="col-lg-4 col-md-6 mb-r">
+
+        <!--Card-->
+        <div class="card card-cascade narrower">
+
+            <!--Card image-->
+            <div class="view overlay hm-white-slight z-depth-1">
+                <img src="https://mdbootstrap.com/img/Photos/Horizontal/E-commerce/Vertical/img%20(29).jpg" class="img-fluid" alt="">
+                <a>
+                    <div class="mask waves-effect waves-light"></div>
+                </a>
+            </div>
+            <!--Card image-->
+            <!--Card content-->
+            <div class="card-body text-center no-padding">
+                <!--Category & Title-->
+                <a href="" class="text-muted"><h5>Shoes</h5></a>
+                <h4 class="card-title"><strong><a href="">High heels</a></strong></h4>
+
+                <!--Rating-->
+                <ul class="rating">
+                    <li><i class="fa fa-star"></i></li>
+                    <li><i class="fa fa-star"></i></li>
+                    <li><i class="fa fa-star"></i></li>
+                    <li><i class="fa fa-star"></i></li>
+                    <li><i class="fa fa-star"></i></li>
+                </ul>
+
+                <!--Description-->
+                <p class="card-text">
+                    Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam.
+                </p>
+
+                <!--Card footer-->
+                <div class="card-footer">
+                    <span class="left">89$</span>
+                    <span class="right">
+                        <a data-toggle="tooltip" data-placement="top" title="" data-original-title="Add to Cart"><i class="fa fa-shopping-cart"></i></a>
+                        <a data-toggle="tooltip" data-placement="top" title="" data-original-title="Share"><i class="fa fa-share-alt"></i></a>
+                        <a class="" data-toggle="tooltip" data-placement="top" title="" data-original-title="Add to Wishlist"><i class="fa fa-heart"></i></a>
+                    </span>
+                </div>
+
+            </div>
+            <!--Card content-->
+
+        </div>
+        <!--Card-->
+
+    </div>
+    <!--Grid column-->
+    <!--Grid column-->
+    <div class="col-lg-4 col-md-6 mb-r">
+
+        <!--Card-->
+        <div class="card card-cascade narrower">
+
+            <!--Card image-->
+            <div class="view overlay hm-white-slight z-depth-1">
+                <img src="https://mdbootstrap.com/img/Photos/Horizontal/E-commerce/Vertical/img%20(30).jpg" class="img-fluid" alt="">
+                <a>
+                    <div class="mask waves-effect waves-light"></div>
+                </a>
+            </div>
+            <!--Card image-->
+            <!--Card content-->
+            <div class="card-body text-center no-padding">
+                <!--Category & Title-->
+                <a href="" class="text-muted"><h5>Accessories</h5></a>
+                <h4 class="card-title"><strong><a href="">White sneakers</a></strong></h4>
+
+                <!--Rating-->
+                <ul class="rating">
+                    <li><i class="fa fa-star"></i></li>
+                    <li><i class="fa fa-star"></i></li>
+                    <li><i class="fa fa-star"></i></li>
+                    <li><i class="fa fa-star"></i></li>
+                    <li><i class="fa fa-star-half-o"></i></li>
+                </ul>
+
+                <!--Description-->
+                <p class="card-text">
+                    Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam.
+                </p>
+
+                <!--Card footer-->
+                <div class="card-footer">
+                    <span class="left">59$</span>
+                    <span class="right">
+                        <a data-toggle="tooltip" data-placement="top" title="" data-original-title="Add to Cart"><i class="fa fa-shopping-cart"></i></a>
+                        <a data-toggle="tooltip" data-placement="top" title="" data-original-title="Share"><i class="fa fa-share-alt"></i></a>
+                        <a class="" data-toggle="tooltip" data-placement="top" title="" data-original-title="Add to Wishlist"><i class="fa fa-heart"></i></a>
+                    </span>
+                </div>
+
+            </div>
+            <!--Card content-->
+
+        </div>
+        <!--Card-->
+
+    </div>
+    <!--Grid column-->
+    <!--Fourth column-->
+    <div class="col-lg-4 col-md-6 mb-r">
+
+        <!--Card-->
+        <div class="card card-cascade narrower">
+
+            <!--Card image-->
+            <div class="view overlay hm-white-slight z-depth-1">
+                <img src="https://mdbootstrap.com/img/Photos/Horizontal/E-commerce/Vertical/img%20(16).jpg" class="img-fluid" alt="">
+                <a>
+                    <div class="mask waves-effect waves-light"></div>
+                </a>
+            </div>
+            <!--Card image-->
+            <!--Card content-->
+            <div class="card-body text-center no-padding">
+                <!--Category & Title-->
+                <a href="" class="text-muted"><h5>Blouses</h5></a>
+                <h4 class="card-title"><strong><a href="">Sweatshirt</a></strong></h4>
+
+                <!--Rating-->
+                <ul class="rating">
+                    <li><i class="fa fa-star"></i></li>
+                    <li><i class="fa fa-star"></i></li>
+                    <li><i class="fa fa-star"></i></li>
+                    <li><i class="fa fa-star"></i></li>
+                    <li><i class="fa fa-star-o"></i></li>
+                </ul>
+
+                <!--Description-->
+                <p class="card-text">
+                    Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam.
+                </p>
+
+                <!--Card footer-->
+                <div class="card-footer">
+                    <span class="left">119$</span>
+                    <span class="right">
+                        <a data-toggle="tooltip" data-placement="top" title="" data-original-title="Add to Cart"><i class="fa fa-shopping-cart"></i></a>
+                        <a data-toggle="tooltip" data-placement="top" title="" data-original-title="Share"><i class="fa fa-share-alt"></i></a>
+                        <a class="active" data-toggle="tooltip" data-placement="top" title="" data-original-title="Added to Wishlist"><i class="fa fa-heart"></i></a>
+                    </span>
+                </div>
+
+            </div>
+            <!--Card content-->
+
+        </div>
+        <!--Card-->
+
+    </div>
+    <!--Fourth column column-->
+
+</div>
 @section js{
     <script>
         $(function () {
