--- a/BlogHealth/Views/Home/Index.cshtml
+++ b/BlogHealth/Views/Home/Index.cshtml
@@ -1645,11 +1645,11 @@
     <script>
         $(function () {
             $('[data-toggle="tooltip"]').tooltip();
-            $('.leftSidebar, .rightSidebar').theiaStickySidebar({
-                'additionalMarginTop': 0,
-                'containerSelector': '#MainContent',
-                'sidebarBehavior': 'stick-to-top',
-            });
+            //$('.leftSidebar, .rightSidebar').theiaStickySidebar({
+            //    'additionalMarginTop': 0,
+            //    'containerSelector': '#MainContent',
+            //    'sidebarBehavior': 'stick-to-top',
+            //});
             //$(".leftSidebar").stick_in_parent();
             
             //var elements = $('.leftSidebar');
