--- a/BlogHealth/Views/Shared/_Layout.cshtml
+++ b/BlogHealth/Views/Shared/_Layout.cshtml
@@ -16,7 +16,7 @@
 <body>
     <header class="" id="header">
         <!--Navbar-->
-        <nav class="navbar navbar-expand-lg navbar-light white black-text " style="font-weight:400">
+        <nav class="navbar navbar-expand-lg navbar-light white black-text pb-0" id="nav-fix-top" style="font-weight:400">
 
             <!-- Navbar brand -->
             <a class="navbar-brand" href="#">Navbar</a>
@@ -124,7 +124,8 @@
     <script src="~/HomeAsset/js/mdb.js"></script>
     <script src="~/HomeAsset/js/ResizeSensor.js"></script>
     <script src="~/HomeAsset/js/theia-sticky-sidebar.js"></script>
-    
+
+    <script src="~/HomeAsset/js/Myscript.js"></script>
 
     
     @RenderSection("js",false)
