--- a/BlogHealth/HomeAsset/css/style.css
+++ b/BlogHealth/HomeAsset/css/style.css
@@ -16841,7 +16841,7 @@ blockquote {
 
     .navbar .dropdown-menu a {
         font-size: .9375rem;
-        font-weight: 300;
+        font-weight: 400;
         padding: 10px;
         color: #000 !important
     }
@@ -16868,7 +16868,11 @@ blockquote {
 }
 
     .navbar.navbar-light .breadcrumb .nav-item .nav-link:hover, .navbar.navbar-light .navbar-nav .nav-item .nav-link:hover {
-        color: rgba(0,0,0,.75)
+        /*color: rgba(0,0,0,.75)*/
+        background-color: #4285F4;
+        color: #fff;
+        transition: all .1s linear;
+        box-shadow: 0 5px 11px 0 rgba(0,0,0,.18), 0 4px 15px 0 rgba(0,0,0,.15);
     }
 
 .navbar.navbar-light .breadcrumb .nav-item.active > .nav-link:hover, .navbar.navbar-light .navbar-nav .nav-item.active > .nav-link:hover, .navbar.navbar-light .navbar-toggler, .navbar.navbar-light form .form-control {
@@ -16876,7 +16880,10 @@ blockquote {
 }
 
 .navbar.navbar-light .breadcrumb .nav-item.active > .nav-link, .navbar.navbar-light .navbar-nav .nav-item.active > .nav-link {
-    background-color: rgba(0,0,0,.1)
+    /*background-color: rgba(0,0,0,.1);*/
+    background-color: #4285F4;
+    color: #fff;
+    box-shadow: 0 5px 11px 0 rgba(0,0,0,.18), 0 4px 15px 0 rgba(0,0,0,.15);
 }
 
 .navbar.navbar-light form input[type=text] {
@@ -31175,3 +31182,8 @@ img[alt=amex] {
 .dwqa-container .rounded {
     margin-bottom: 2rem
 }
+/*
+    CONFIG STYLE ANIMATION NAVBAR
+
+
+*/
