--- a/BlogHealth/Views/Shared/_Layout.cshtml
+++ b/BlogHealth/Views/Shared/_Layout.cshtml
@@ -16,7 +16,7 @@
 <body>
     <header class="" id="header">
         <!--Navbar-->
-        <nav class="navbar navbar-expand-lg navbar-light white black-text pb-0" id="nav-fix-top" style="font-weight:400">
+        <nav class="navbar navbar-expand-lg navbar-light white black-text p-0" id="nav-fix-top" style="font-weight:400">
 
             <!-- Navbar brand -->
             <a class="navbar-brand" href="#">Navbar</a>
@@ -32,18 +32,18 @@
 
                 <!-- Links -->
                 <ul class="navbar-nav mr-auto">
-                    <li class="nav-item active">
+                    <li class="nav-item active ml-1">
                         <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item ml-1">
                         <a class="nav-link" href="#">Features</a>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item ml-1">
                         <a class="nav-link" href="#">Pricing</a>
                     </li>
 
                     <!-- Dropdown -->
-                    <li class="nav-item dropdown">
+                    <li class="nav-item dropdown ml-1">
                         <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Dropdown</a>
                         <div class="dropdown-menu dropdown-primary" aria-labelledby="navbarDropdownMenuLink" style="font-weight:400!important">
                             <a class="dropdown-item" href="#">Action</a>
