--- a/BlogHealth/Views/Shared/_Layout.cshtml
+++ b/BlogHealth/Views/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>@ViewBag.Title - My ASP.NET Application</title>
+    <title>@ViewBag.Title</title>
     @*<link href="~/Content/Site.css" rel="stylesheet" type="text/css" />
     <link href="~/Content/bootstrap.min.css" rel="stylesheet" type="text/css" />
     <script src="~/Scripts/modernizr-2.6.2.js"></script>*@
@@ -11,12 +11,13 @@
     <link href="~/HomeAsset/css/mdb.css" rel="stylesheet" />
     <link href="~/HomeAsset/css/style.css" rel="stylesheet" />
     <link href="~/HomeAsset/font/font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet" />
+    
     @RenderSection("css",false)
 </head>
 <body>
     <header class="" id="header">
         <!--Navbar-->
-        <nav class="navbar navbar-expand-lg navbar-light white black-text p-0" id="nav-fix-top" style="font-weight:400">
+        <nav class="navbar navbar-expand-lg navbar-light white black-text p-0" id="nav-fix-top" style="font-weight:400;">
 
             <!-- Navbar brand -->
             <a class="navbar-brand" href="#">Navbar</a>
@@ -45,18 +46,22 @@
                     <!-- Dropdown -->
                     <li class="nav-item dropdown ml-1">
                         <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Dropdown</a>
-                        <div class="dropdown-menu dropdown-primary" aria-labelledby="navbarDropdownMenuLink" style="font-weight:400!important">
-                            <a class="dropdown-item" href="#">Action</a>
-                            <a class="dropdown-item" href="#">Another action</a>
-                            <a class="dropdown-item" href="#">Something else here</a>
+                        <div class="dropdown-menu dropdown-primary p-1" aria-labelledby="navbarDropdownMenuLink" style="font-weight:400!important">
+                            <a class="dropdown-item p-1" href="#">Action</a>
+                            <a class="dropdown-item p-1" href="#">Another action</a>
+                            <a class="dropdown-item p-1" href="#">Something else here</a>
                         </div>
                     </li>
 
                 </ul>
                 <!-- Links -->
                 <!-- Search form -->
-                <form class="form-inline">
-                    <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
+                <form class="form-inline" onkeypress="return event.keyCode != 13;" role="search" method="GET" autocomplete="off">
+                    <div class="form-group waves-light waves-effect waves-light">
+
+                        <input type="text" class="form-control mb-0" name="mdw_serach" placeholder="Search" id="mdw_main_search">
+                    </div>
+                    <div class="dropdown-wrapper"></div>
                 </form>
             </div>
             <!-- Collapsible content -->
