add comment with config post page

--- a/BlogHealth/HomeAsset/css/style.css
+++ b/BlogHealth/HomeAsset/css/style.css
@@ -4576,10 +4576,10 @@ tbody.collapse.show {
 
 .breadcrumb-item + .breadcrumb-item::before {
     display: inline-block;
-    padding-right: .5rem;
-    padding-left: .5rem;
+    padding-right: .1rem;
+    padding-left: .1rem;
     color: #868e96;
-    content: "/"
+    content: ""
 }
 
 .breadcrumb-item + .breadcrumb-item:hover::before {
