add posts page fix hover link change left,right sidebar

--- a/BlogHealth/HomeAsset/css/style.css
+++ b/BlogHealth/HomeAsset/css/style.css
@@ -31198,4 +31198,6 @@ img[alt=amex] {
         -moz-animation-delay: .1s;
         /*-webkit-animation-iteration-count: infinite;*/
  }
- 
+.MyTitle:hover {
+    color: #c62828 !important;
+}
