--- a/BlogHealth/Views/Home/Index.cshtml
+++ b/BlogHealth/Views/Home/Index.cshtml
@@ -31,7 +31,7 @@
                             <div class="row">
 
                                 <!--Grid column-->
-                                <div class="col-lg-5 col-sm-12 col-xs-12 mb-1">
+                                <div class="col-lg-5 col-sm-12 col-xs-12 mb-1 pr-1">
                                     <!--Featured image-->
                                     <div class="view overlay hm-white-slight z-depth-1-half">
                                         <img src="https://mdbootstrap.com/img/Photos/Others/img (38).jpg" class="img-fluid" alt="First sample image">
@@ -45,8 +45,8 @@
                                 <div class="col-lg-7 mb-1 pl-xl-0 pl-sm-5 ">
                                     
                                     <div class="d-flex w-100 justify-content-between">
-                                        <small class="text-muted red-text"><i class="fa fa-heart"></i>&nbsp; Sức khỏe</small>
-                                        <small class="text-muted"><i class="fa fa-calendar"></i> 10/10/2017</small>
+                                        <small class="text-muted red-text">Sức khỏe</small>
+                                        <small class="text-muted"><i class="fa fa-clock-o"></i>12:12 10/10</small>
                                     </div>
                                     <a href="#" class="text-dark"> <h6 class="mb-3"><strong>This is title of the news This is title of the news This is title of the news</strong></h6></a>
                                     <div class="d-flex flex-row-reverse">
@@ -63,32 +63,35 @@
                             </div>
 
 
-                            <hr class="mx-1">
+                            <hr class="mx-1 mb-1 mt-0">
 
 
                             <div class="row">
 
                                 <!--Grid column-->
-                                <div class="col-lg-5 mb-1">
+                                <div class="col-lg-5 col-sm-12 col-xs-12 mb-1 pr-1">
                                     <!--Featured image-->
                                     <div class="view overlay hm-white-slight z-depth-1-half">
                                         <img src="https://mdbootstrap.com/img/Photos/Others/img (38).jpg" class="img-fluid" alt="First sample image">
-                                        <a>
+                                        <a href="#">
                                             <div class="mask"></div>
                                         </a>
                                     </div>
                                 </div>
                                 <!--Grid column-->
                                 <!--Grid column-->
-                                <div class="col-lg-7 mb-1 pl-0">
+                                <div class="col-lg-7 mb-1 pl-xl-0 pl-sm-5 ">
+
                                     <div class="d-flex w-100 justify-content-between">
-                                        <small class="text-muted red-text"><i class="fa fa-heart"></i>&nbsp; Sức khỏe</small>
-                                        <small class="text-muted"><i class="fa fa-calendar"></i> 10/10/2017</small>
+                                        <small class="text-muted red-text">Sức khỏe</small>
+                                        <small class="text-muted"><i class="fa fa-clock-o"></i>12:12 10/10</small>
                                     </div>
-                                    <h6 class="mb-3"><strong>This is title of the news This is title of the news This is title of the news</strong></h6>
+                                    <a href="#" class="text-dark"> <h6 class="mb-3"><strong>This is title of the news This is title of the news This is title of the news</strong></h6></a>
                                     <div class="d-flex flex-row-reverse">
-                                        <small class="text-muted mx-3"><i class="fa fa-comment-o"></i>100</small>
-                                        <small class="text-muted"><i class="fa fa-eye" aria-hidden="true"></i>100</small>
+                                        <small class="text-muted ml-2"><i class="fa fa-comment-o"></i>100</small>
+                                        <small class="text-muted ml-2"><i class="fa fa-eye" aria-hidden="true"></i>100</small>
+                                        <small class="text-muted ml-2"><i class="fa fa-share-alt"></i>100</small>
+                                        <small class="text-muted "><i class="fa fa-thumbs-o-up"></i>100</small>
                                     </div>
 
 
@@ -98,32 +101,34 @@
                             </div>
 
 
-                            <hr class="mx-1">
-
+                            <hr class="mx-1 mb-1 mt-0">
 
                             <div class="row">
 
                                 <!--Grid column-->
-                                <div class="col-lg-5 mb-1">
+                                <div class="col-lg-5 col-sm-12 col-xs-12 mb-1 pr-1">
                                     <!--Featured image-->
                                     <div class="view overlay hm-white-slight z-depth-1-half">
                                         <img src="https://mdbootstrap.com/img/Photos/Others/img (38).jpg" class="img-fluid" alt="First sample image">
-                                        <a>
+                                        <a href="#">
                                             <div class="mask"></div>
                                         </a>
                                     </div>
                                 </div>
                                 <!--Grid column-->
                                 <!--Grid column-->
-                                <div class="col-lg-7 mb-1 pl-0">
+                                <div class="col-lg-7 mb-1 pl-xl-0 pl-sm-5 ">
+
                                     <div class="d-flex w-100 justify-content-between">
-                                        <small class="text-muted red-text"><i class="fa fa-heart"></i>&nbsp; Sức khỏe</small>
-                                        <small class="text-muted"><i class="fa fa-calendar"></i> 10/10/2017</small>
+                                        <small class="text-muted red-text">Sức khỏe</small>
+                                        <small class="text-muted"><i class="fa fa-clock-o"></i>12:12 10/10</small>
                                     </div>
-                                    <h6 class="mb-3"><strong>This is title of the news This is title of the news This is title of the news</strong></h6>
+                                    <a href="#" class="text-dark"> <h6 class="mb-3"><strong>This is title of the news This is title of the news This is title of the news</strong></h6></a>
                                     <div class="d-flex flex-row-reverse">
-                                        <small class="text-muted mx-3"><i class="fa fa-comment-o"></i>100</small>
-                                        <small class="text-muted"><i class="fa fa-eye" aria-hidden="true"></i>100</small>
+                                        <small class="text-muted ml-2"><i class="fa fa-comment-o"></i>100</small>
+                                        <small class="text-muted ml-2"><i class="fa fa-eye" aria-hidden="true"></i>100</small>
+                                        <small class="text-muted ml-2"><i class="fa fa-share-alt"></i>100</small>
+                                        <small class="text-muted "><i class="fa fa-thumbs-o-up"></i>100</small>
                                     </div>
 
 
@@ -131,32 +136,36 @@
                                 <!--Grid column-->
 
                             </div>
-                            <hr class="mx-1">
 
+
+                            <hr class="mx-1 mb-1 mt-0">
 
                             <div class="row">
 
                                 <!--Grid column-->
-                                <div class="col-lg-5 mb-1">
+                                <div class="col-lg-5 col-sm-12 col-xs-12 mb-1 pr-1">
                                     <!--Featured image-->
                                     <div class="view overlay hm-white-slight z-depth-1-half">
                                         <img src="https://mdbootstrap.com/img/Photos/Others/img (38).jpg" class="img-fluid" alt="First sample image">
-                                        <a>
+                                        <a href="#">
                                             <div class="mask"></div>
                                         </a>
                                     </div>
                                 </div>
                                 <!--Grid column-->
                                 <!--Grid column-->
-                                <div class="col-lg-7 mb-1 pl-0">
+                                <div class="col-lg-7 mb-1 pl-xl-0 pl-sm-5 ">
+
                                     <div class="d-flex w-100 justify-content-between">
-                                        <small class="text-muted red-text"><i class="fa fa-heart"></i>&nbsp; Sức khỏe</small>
-                                        <small class="text-muted"><i class="fa fa-calendar"></i> 10/10/2017</small>
+                                        <small class="text-muted red-text">Sức khỏe</small>
+                                        <small class="text-muted"><i class="fa fa-clock-o"></i>12:12 10/10</small>
                                     </div>
-                                    <h6 class="mb-3"><strong>This is title of the news This is title of the news This is title of the news</strong></h6>
+                                    <a href="#" class="text-dark"> <h6 class="mb-3"><strong>This is title of the news This is title of the news This is title of the news</strong></h6></a>
                                     <div class="d-flex flex-row-reverse">
-                                        <small class="text-muted mx-3"><i class="fa fa-comment-o"></i>100</small>
-                                        <small class="text-muted"><i class="fa fa-eye" aria-hidden="true"></i>100</small>
+                                        <small class="text-muted ml-2"><i class="fa fa-comment-o"></i>100</small>
+                                        <small class="text-muted ml-2"><i class="fa fa-eye" aria-hidden="true"></i>100</small>
+                                        <small class="text-muted ml-2"><i class="fa fa-share-alt"></i>100</small>
+                                        <small class="text-muted "><i class="fa fa-thumbs-o-up"></i>100</small>
                                     </div>
 
 
@@ -164,6 +173,46 @@
                                 <!--Grid column-->
 
                             </div>
+
+
+                            <hr class="mx-1 mb-1 mt-0">
+
+                            <div class="row">
+
+                                <!--Grid column-->
+                                <div class="col-lg-5 col-sm-12 col-xs-12 mb-1 pr-1">
+                                    <!--Featured image-->
+                                    <div class="view overlay hm-white-slight z-depth-1-half">
+                                        <img src="https://mdbootstrap.com/img/Photos/Others/img (38).jpg" class="img-fluid" alt="First sample image">
+                                        <a href="#">
+                                            <div class="mask"></div>
+                                        </a>
+                                    </div>
+                                </div>
+                                <!--Grid column-->
+                                <!--Grid column-->
+                                <div class="col-lg-7 mb-1 pl-xl-0 pl-sm-5 ">
+
+                                    <div class="d-flex w-100 justify-content-between">
+                                        <small class="text-muted red-text">Sức khỏe</small>
+                                        <small class="text-muted"><i class="fa fa-clock-o"></i>12:12 10/10</small>
+                                    </div>
+                                    <a href="#" class="text-dark"> <h6 class="mb-3"><strong>This is title of the news This is title of the news This is title of the news</strong></h6></a>
+                                    <div class="d-flex flex-row-reverse">
+                                        <small class="text-muted ml-2"><i class="fa fa-comment-o"></i>100</small>
+                                        <small class="text-muted ml-2"><i class="fa fa-eye" aria-hidden="true"></i>100</small>
+                                        <small class="text-muted ml-2"><i class="fa fa-share-alt"></i>100</small>
+                                        <small class="text-muted "><i class="fa fa-thumbs-o-up"></i>100</small>
+                                    </div>
+
+
+                                </div>
+                                <!--Grid column-->
+
+                            </div>
+
+
+                            
 
 
 
@@ -255,7 +304,7 @@
                                 <div class="col-lg-12 col-md-12 mb-2 mr-1 p-0 hm-white-slight z-depth-1-half overlay rounded">
                                     <!--Featured image-->
                                     <div class="view mb-2 rounded-top">
-                                        <img src="https://mdbootstrap.com/img/Photos/Horizontal/Nature/4-col/img%20(131).jpg" class="img-fluid" alt="First sample image">
+                                        <img src="~/Images/3-35-324x235.png" class="img-fluid" alt="First sample image">
                                         <a>
                                             <div class="mask"></div>
                                         </a>
