--- a/BlogHealth/Views/Shared/_Layout.cshtml
+++ b/BlogHealth/Views/Shared/_Layout.cshtml
@@ -16,87 +16,88 @@
     @RenderSection("css", false)
 </head>
 <body>
-    <header class="" id="header">
-        <div class="row">
-            <div class="col-lg-12 bg-white px-5 mb-1 py-1 grey lighten-4">
-                <div class="d-flex justify-content-end">
-                    <div class="mr-auto py-0">
-                        @*<!--Facebook-->
-                        <a href="https://www.facebook.com/caohieuchamcom/" target="_blank" class="icons-sm fb-ic ml-4 py-0" data-toggle="tooltip" data-placement="bottom" title="Chúng tôi trên facebook"> <i class="fa fa-facebook"> </i></a>
-                        <!--Twitter-->
-                        <a href="https://twitter.com/intent/tweet?text=https://caohieu.com/" target="_blank" class="icons-sm tw-ic ml-4 py-0" data-toggle="tooltip" data-placement="bottom" title="Chúng tôi trên twitter"><i class="fa fa-twitter"> </i></a>
-                        <!--Google +-->
-                        <a href="" class="icons-sm gplus-ic ml-4 py-0" target="_blank" data-toggle="tooltip" data-placement="bottom" title="Chúng tôi trên google+"><i class="fa fa-google-plus"> </i></a>
+    <header>
+        <div class="container-fluid" id="header">
+            <div class="row">
+                <div class="col-lg-12 bg-white px-5 mb-1 py-1 grey lighten-4">
+                    <div class="d-flex justify-content-end">
+                        <div class="mr-auto py-0">
+                            @*<!--Facebook-->
+                            <a href="https://www.facebook.com/caohieuchamcom/" target="_blank" class="icons-sm fb-ic ml-4 py-0" data-toggle="tooltip" data-placement="bottom" title="Chúng tôi trên facebook"> <i class="fa fa-facebook"> </i></a>
+                            <!--Twitter-->
+                            <a href="https://twitter.com/intent/tweet?text=https://caohieu.com/" target="_blank" class="icons-sm tw-ic ml-4 py-0" data-toggle="tooltip" data-placement="bottom" title="Chúng tôi trên twitter"><i class="fa fa-twitter"> </i></a>
+                            <!--Google +-->
+                            <a href="" class="icons-sm gplus-ic ml-4 py-0" target="_blank" data-toggle="tooltip" data-placement="bottom" title="Chúng tôi trên google+"><i class="fa fa-google-plus"> </i></a>
 
-                        <!--Instagram-->
-                        <a href="https://www.instagram.com/lehieubt3/" target="_blank" class="icons-sm ins-ic ml-4 py-0" data-toggle="tooltip" data-placement="bottom" title="Chúng tôi trên instagram"><i class="fa fa-instagram"> </i></a>*@
-                        <span class="teal-text"><i class="fa fa-calendar"></i>&nbsp;@DateTime.Now.ToString("dddd, dd/MM/yyyy", CultureInfo.CreateSpecificCulture("vi-VN"))</span>
-                    </div>
-                    <div class="pl-1 py-0 black-text">
-                        <a class="nav-link py-0 teal-text" href="@Url.Action("Partner","Home")"><i class="fa fa-handshake-o"></i>Đối tác</a>
+                            <!--Instagram-->
+                            <a href="https://www.instagram.com/lehieubt3/" target="_blank" class="icons-sm ins-ic ml-4 py-0" data-toggle="tooltip" data-placement="bottom" title="Chúng tôi trên instagram"><i class="fa fa-instagram"> </i></a>*@
+                            <span class="teal-text"><i class="fa fa-calendar"></i>&nbsp;@DateTime.Now.ToString("dddd, dd/MM/yyyy", CultureInfo.CreateSpecificCulture("vi-VN"))</span>
+                        </div>
+                        <div class="pl-1 py-0 black-text">
+                            <a class="nav-link py-0 teal-text" href="@Url.Action("Partner","Home")"><i class="fa fa-handshake-o"></i>Đối tác</a>
 
-                    </div>
-                    <div class="pl-1 py-0">
-                        <a class="nav-link py-0 teal-text" href="#"><i class="fa fa-share-square-o"></i>Giới thiệu</a>
-                    </div>
-                    <div class="pl-1 py-0">
-                        <a class="nav-link py-0 teal-text" href="#"><i class="fa fa-phone"></i>Liên hệ</a>
-                    </div>
-                    <div class="pl-1 pr-3 py-0">
-                        <a class="nav-link py-0 teal-text" href="#" data-toggle="modal" data-target="#basicExample"><i class="fa fa-thumbs-o-up"></i>Đóng góp</a>
+                        </div>
+                        <div class="pl-1 py-0">
+                            <a class="nav-link py-0 teal-text" href="#"><i class="fa fa-share-square-o"></i>Giới thiệu</a>
+                        </div>
+                        <div class="pl-1 py-0">
+                            <a class="nav-link py-0 teal-text" href="#"><i class="fa fa-phone"></i>Liên hệ</a>
+                        </div>
+                        <div class="pl-1 pr-3 py-0">
+                            <a class="nav-link py-0 teal-text" href="#" data-toggle="modal" data-target="#basicExample"><i class="fa fa-thumbs-o-up"></i>Đóng góp</a>
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
-        <!--Navbar-->
+            <!--Navbar-->
 
-        <div class="mb-5">
+            <div class="mb-5">
 
-        </div>
-        <div class="mb-5">
+            </div>
+            <div class="mb-5">
 
-        </div>
-        <nav class="navbar navbar-expand-lg navbar-light white black-text py-0  px-lg-5 px-xl-5 px-md-5 px-sm-0"  id="nav-fix-top" style="font-weight:400;">
+            </div>
+            <nav class="navbar navbar-expand-lg navbar-light white black-text py-0  px-lg-5 px-xl-5 px-md-5 px-sm-0" id="nav-fix-top" style="font-weight:400;">
 
-            <!-- Navbar brand -->
-            <a class="navbar-brand" href="#">Navbar</a>
+                <!-- Navbar brand -->
+                <a class="navbar-brand" href="#">Navbar</a>
 
-            <!-- Collapse button -->
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarMenuContent" aria-controls="navbarMenuContent"
-                    aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
+                <!-- Collapse button -->
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarMenuContent" aria-controls="navbarMenuContent"
+                        aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
 
-            <!-- Collapsible content -->
-            <div class="collapse navbar-collapse" id="navbarMenuContent">
+                <!-- Collapsible content -->
+                <div class="collapse navbar-collapse" id="navbarMenuContent">
 
-                <!-- Links -->
-                <ul class="navbar-nav mr-auto">
-                    <li class="nav-item active ml-1">
-                        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-                    </li>
-                    <li class="nav-item ml-1">
-                        <a class="nav-link" href="#">Features</a>
-                    </li>
-                    <li class="nav-item ml-1">
-                        <a class="nav-link" href="#">Pricing</a>
-                    </li>
+                    <!-- Links -->
+                    <ul class="navbar-nav mr-auto">
+                        <li class="nav-item active ml-1">
+                            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                        </li>
+                        <li class="nav-item ml-1">
+                            <a class="nav-link" href="#">Features</a>
+                        </li>
+                        <li class="nav-item ml-1">
+                            <a class="nav-link" href="#">Pricing</a>
+                        </li>
 
-                    <!-- Dropdown -->
-                    <li class="nav-item dropdown ml-1">
-                        <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Dropdown</a>
-                        <div class="dropdown-menu dropdown-primary p-1" aria-labelledby="navbarDropdownMenuLink" style="font-weight:400!important">
-                            <a class="dropdown-item p-1" href="#">Action</a>
-                            <a class="dropdown-item p-1" href="#">Another action</a>
-                            <a class="dropdown-item p-1" href="#">Something else here</a>
-                        </div>
-                    </li>
+                        <!-- Dropdown -->
+                        <li class="nav-item dropdown ml-1">
+                            <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Dropdown</a>
+                            <div class="dropdown-menu dropdown-primary p-1" aria-labelledby="navbarDropdownMenuLink" style="font-weight:400!important">
+                                <a class="dropdown-item p-1" href="#">Action</a>
+                                <a class="dropdown-item p-1" href="#">Another action</a>
+                                <a class="dropdown-item p-1" href="#">Something else here</a>
+                            </div>
+                        </li>
 
-                </ul>
-                <!-- Links -->
-                <!-- Search form -->
-                <form class="form-inline waves-effect waves-dark hidden-md-down ">
-                    @*<div class="sm-form  input-group">*@
+                    </ul>
+                    <!-- Links -->
+                    <!-- Search form -->
+                    <form class="form-inline waves-effect waves-dark hidden-md-down ">
+                        @*<div class="sm-form  input-group">*@
                         <i class="fa fa-search prefix red-text"></i>
                         @*<span class="input-group-btn">
                             <button class="btn btn-default btn-sm" type="button">Hate it</button>
@@ -104,24 +105,24 @@
                         <input class="form-control" type="text" placeholder="Tìm kiếm bài viết..." aria-label="Search">
                         @*<span class="input-group-btn">
                             <button class="btn btn-primary btn-sm" type="button">Tìm kiếm</button>
-                        </span>*@ 
-                    @*</div>*@
-                                   
-    @*<button class="btn btn-outline-primary btn-sm my-0 waves-effect" type="submit"><i class="fa fa-search"></i></button>*@
-                </form>
+                        </span>*@
+                        @*</div>*@
+
+                        @*<button class="btn btn-outline-primary btn-sm my-0 waves-effect" type="submit"><i class="fa fa-search"></i></button>*@
+                    </form>
 
 
 
-            </div>
-            <!-- Collapsible content -->
+                </div>
+                <!-- Collapsible content -->
 
-        </nav>
-        <!--/.Navbar-->
+            </nav>
+            <!--/.Navbar-->
+        </div>
     </header>
+   
 
-
-
-    <div class="container-fluid" id="main-content">
+    <div class="container-fluid " id="main-content">
         <div class="col-xl-12 my-2 ">
 
             <div class="container-fluid">
