add theme admin

--- a/BlogHealth/Views/Shared/_Layout.cshtml
+++ b/BlogHealth/Views/Shared/_Layout.cshtml
@@ -8,9 +8,12 @@
     @*<link href="~/Content/Site.css" rel="stylesheet" type="text/css" />
         <link href="~/Content/bootstrap.min.css" rel="stylesheet" type="text/css" />
         <script src="~/Scripts/modernizr-2.6.2.js"></script>*@
-    <link href="~/HomeAsset/css/bootstrap.css" rel="stylesheet" />
+    @*<link href="~/HomeAsset/css/bootstrap.css" rel="stylesheet" />
     <link href="~/HomeAsset/css/mdb.css" rel="stylesheet" />
-    <link href="~/HomeAsset/css/style.css" rel="stylesheet" />
+    <link href="~/HomeAsset/css/style.css" rel="stylesheet" />*@
+    <link href="~/AdminAsset/css/bootstrap.min.css" rel="stylesheet" />
+    <link href="~/AdminAsset/css/mdb.min.css" rel="stylesheet" />
+    <link href="~/AdminAsset/css/style.css" rel="stylesheet" />
     <link href="~/HomeAsset/font/font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet" />
 
     @RenderSection("css", false)
@@ -639,14 +642,17 @@
     <!--/.Footer-->
 
 
-    <script src="~/HomeAsset/js/jquery-3.2.1.js"></script>
-    @*<script src="~/HomeAsset/js/jquery-3.2.1.min.js"></script>*@
+    @*<script src="~/HomeAsset/js/jquery-3.2.1.js"></script>
+    
     <script src="~/HomeAsset/js/popper.min.js"></script>
     <script src="~/HomeAsset/js/bootstrap.js"></script>
     <script src="~/HomeAsset/js/mdb.js"></script>
     <script src="~/HomeAsset/js/ResizeSensor.js"></script>
-    <script src="~/HomeAsset/js/theia-sticky-sidebar.js"></script>
-
+    <script src="~/HomeAsset/js/theia-sticky-sidebar.js"></script>*@
+    <script src="~/AdminAsset/js/jquery-3.2.1.min.js"></script>
+    <script src="~/AdminAsset/js/popper.min.js"></script>
+    <script src="~/AdminAsset/js/bootstrap.min.js"></script>
+    <script src="~/AdminAsset/js/mdb.min.js"></script>
     <script src="~/HomeAsset/js/Myscript.js"></script>
     <script>
         $(function () {
