--- a/BlogHealth/AdminAsset/css/style.css
+++ b/BlogHealth/AdminAsset/css/style.css
@@ -1,5 +1,15 @@
+@font-face {
+    font-family: OpenSans;
+    src: url(../font/Opensans/OpenSans-Regular.ttf);
+    font-weight: 500;
+}
+
 body {
-    background-color: #eee;
+    font-family: OpenSans !important; /*Roboto,sans-serif*/
+}
+
+body {
+    background-color: #fff;
 }
 
 .side-nav .logo-sn {
