--- a/BlogHealth/Views/Home/Posts.cshtml
+++ b/BlogHealth/Views/Home/Posts.cshtml
@@ -5,12 +5,6 @@
 
 <div class="col-xl-9  pl-lg-4 pl-xl-4 pr-lg-2 pr-xl-2">
 
-
-      
-
-
-  
-
     <div class="card mb-2">
         <div class="card-body">
             <div class="container-fluid">
@@ -1315,6 +1309,144 @@
                     <!--Grid column-->
 
                 </div>
+                <section class="section">
+
+                    <!--Section heading-->
+                    <h3 class="section-heading h1 mt-0">Lightbox</h3>
+
+                    <div class="row">
+                        <div class="col-md-12 mb-4">
+
+                            <div id="mdb-lightbox-ui">
+                                <!-- Root element of PhotoSwipe. Must have class pswp. -->
+                                <div class="pswp" tabindex="-1" role="dialog" aria-hidden="true">
+
+                                    <!-- Background of PhotoSwipe.
+                                     It's a separate element, as animating opacity is faster than rgba(). -->
+                                    <div class="pswp__bg"></div>
+
+                                    <!-- Slides wrapper with overflow:hidden. -->
+                                    <div class="pswp__scroll-wrap">
+
+                                        <!-- Container that holds slides. PhotoSwipe keeps only 3 slides in DOM to save memory. -->
+                                        <!-- don't modify these 3 pswp__item elements, data is added later on. -->
+                                        <div class="pswp__container" style="transform: translate3d(0px, 0px, 0px);">
+                                            <div class="pswp__item" style="display: block; transform: translate3d(-1511px, 0px, 0px);"><div class="pswp__zoom-wrap" style="transform: translate3d(254px, 44px, 0px) scale(1);"><img class="pswp__img pswp__img--placeholder" src="https://mdbootstrap.com/img/Photos/Horizontal/Nature/4-col/img%20(132).jpg" style="width: 841px; height: 561px;"><img class="pswp__img" src="https://mdbootstrap.com/img/Photos/Horizontal/Nature/12-col/img%20(132).jpg" style="width: 841px; height: 561px;"></div></div>
+                                            <div class="pswp__item" style="transform: translate3d(0px, 0px, 0px);"><div class="pswp__zoom-wrap" style="transform: translate3d(489.5px, 224.875px, 0px) scale(0.439828);"><img class="pswp__img pswp__img--placeholder" src="https://mdbootstrap.com/img/Photos/Horizontal/Nature/4-col/img%20(115).jpg" style="width: 841px; height: 561px;"><img class="pswp__img" src="https://mdbootstrap.com/img/Photos/Horizontal/Nature/12-col/img%20(115).jpg" style="display: block; width: 841px; height: 561px;"></div></div>
+                                            <div class="pswp__item" style="display: block; transform: translate3d(1511px, 0px, 0px);"><div class="pswp__zoom-wrap" style="transform: translate3d(254px, 44px, 0px) scale(1);"><img class="pswp__img pswp__img--placeholder" src="https://mdbootstrap.com/img/Photos/Horizontal/Nature/4-col/img%20(133).jpg" style="width: 841px; height: 561px;"><img class="pswp__img" src="https://mdbootstrap.com/img/Photos/Horizontal/Nature/12-col/img%20(133).jpg" style="width: 841px; height: 561px;"></div></div>
+                                        </div>
+
+                                        <!-- Default (PhotoSwipeUI_Default) interface on top of sliding area. Can be changed. -->
+                                        <div class="pswp__ui pswp__ui--fit pswp__ui--hidden">
+
+                                            <div class="pswp__top-bar">
+
+                                                <!--  Controls are self-explanatory. Order can be changed. -->
+
+                                                <div class="pswp__counter">8 / 9</div>
+
+                                                <button class="pswp__button pswp__button--close" title="Close (Esc)"></button>
+
+                                                <!--<button class="pswp__button pswp__button--share" title="Share"></button>-->
+
+                                                <button class="pswp__button pswp__button--fs" title="Toggle fullscreen"></button>
+
+                                                <button class="pswp__button pswp__button--zoom" title="Zoom in/out"></button>
+
+                                                <!-- Preloader demo http://codepen.io/dimsemenov/pen/yyBWoR -->
+                                                <!-- element will get class pswp__preloader--active when preloader is running -->
+                                                <div class="pswp__preloader pswp__preloader--active">
+                                                    <div class="pswp__preloader__icn">
+                                                        <div class="pswp__preloader__cut">
+                                                            <div class="pswp__preloader__donut"></div>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+
+                                            <!--
+                                        <div class="pswp__share-modal pswp__share-modal--hidden pswp__single-tap">
+                                            <div class="pswp__share-tooltip"></div>
+                                        </div>
+                                        -->
+
+                                            <button class="pswp__button pswp__button--arrow--left" title="Previous (arrow left)"></button>
+
+                                            <button class="pswp__button pswp__button--arrow--right" title="Next (arrow right)"></button>
+
+                                            <div class="pswp__caption">
+                                                <div class="pswp__caption__center"></div>
+                                            </div>
+
+                                        </div>
+
+                                    </div>
+
+                                </div>
+                            </div>
+
+                            <div class="mdb-lightbox no-margin" data-pswp-uid="1">
+
+                                <figure class="col-md-4">
+                                    <a href="https://mdbootstrap.com/img/Photos/Horizontal/Nature/12-col/img%20(117).jpg" data-size="1600x1067" alt="Material Design for Bootstrap - example photo">
+                                        <img src="https://mdbootstrap.com/img/Photos/Horizontal/Nature/4-col/img%20(117).jpg" class="img-fluid" alt="Material Design for Bootstrap - example photo">
+                                    </a>
+                                </figure>
+
+                                <figure class="col-md-4">
+                                    <a href="https://mdbootstrap.com/img/Photos/Horizontal/Nature/12-col/img%20(98).jpg" data-size="1600x1067" alt="Material Design for Bootstrap - example photo">
+                                        <img src="https://mdbootstrap.com/img/Photos/Horizontal/Nature/4-col/img%20(98).jpg" class="img-fluid" alt="Material Design for Bootstrap - example photo">
+                                    </a>
+                                </figure>
+
+                                <figure class="col-md-4">
+                                    <a href="https://mdbootstrap.com/img/Photos/Horizontal/Nature/12-col/img%20(131).jpg" data-size="1600x1067" alt="Material Design for Bootstrap - example photo">
+                                        <img src="https://mdbootstrap.com/img/Photos/Horizontal/Nature/4-col/img%20(131).jpg" class="img-fluid" alt="Material Design for Bootstrap - example photo">
+                                    </a>
+                                </figure>
+
+                                <figure class="col-md-4">
+                                    <a href="https://mdbootstrap.com/img/Photos/Horizontal/Nature/12-col/img%20(123).jpg" data-size="1600x1067" alt="Material Design for Bootstrap - example photo">
+                                        <img src="https://mdbootstrap.com/img/Photos/Horizontal/Nature/4-col/img%20(123).jpg" class="img-fluid" alt="Material Design for Bootstrap - example photo">
+                                    </a>
+                                </figure>
+
+                                <figure class="col-md-4">
+                                    <a href="https://mdbootstrap.com/img/Photos/Horizontal/Nature/12-col/img%20(118).jpg" data-size="1600x1067" alt="Material Design for Bootstrap - example photo">
+                                        <img src="https://mdbootstrap.com/img/Photos/Horizontal/Nature/4-col/img%20(118).jpg" class="img-fluid" alt="Material Design for Bootstrap - example photo">
+                                    </a>
+                                </figure>
+
+                                <figure class="col-md-4">
+                                    <a href="https://mdbootstrap.com/img/Photos/Horizontal/Nature/12-col/img%20(128).jpg" data-size="1600x1067" alt="Material Design for Bootstrap - example photo">
+                                        <img src="https://mdbootstrap.com/img/Photos/Horizontal/Nature/4-col/img%20(128).jpg" class="img-fluid" alt="Material Design for Bootstrap - example photo">
+                                    </a>
+                                </figure>
+
+                                <figure class="col-md-4">
+                                    <a href="https://mdbootstrap.com/img/Photos/Horizontal/Nature/12-col/img%20(132).jpg" data-size="1600x1067" alt="Material Design for Bootstrap - example photo">
+                                        <img src="https://mdbootstrap.com/img/Photos/Horizontal/Nature/4-col/img%20(132).jpg" class="img-fluid" alt="Material Design for Bootstrap - example photo">
+                                    </a>
+                                </figure>
+
+                                <figure class="col-md-4">
+                                    <a href="https://mdbootstrap.com/img/Photos/Horizontal/Nature/12-col/img%20(115).jpg" data-size="1600x1067" alt="Material Design for Bootstrap - example photo">
+                                        <img src="https://mdbootstrap.com/img/Photos/Horizontal/Nature/4-col/img%20(115).jpg" class="img-fluid" alt="Material Design for Bootstrap - example photo">
+                                    </a>
+                                </figure>
+
+                                <figure class="col-md-4">
+                                    <a href="https://mdbootstrap.com/img/Photos/Horizontal/Nature/12-col/img%20(133).jpg" data-size="1600x1067" alt="Material Design for Bootstrap - example photo">
+                                        <img src="https://mdbootstrap.com/img/Photos/Horizontal/Nature/4-col/img%20(133).jpg" class="img-fluid" alt="Material Design for Bootstrap - example photo">
+                                    </a>
+                                </figure>
+
+                            </div>
+
+                        </div>
+                    </div>
+
+                </section>
             </div>
         </div>
     </div>
