--- a/BlogHealth/Views/Home/Index.cshtml
+++ b/BlogHealth/Views/Home/Index.cshtml
@@ -8,7 +8,7 @@
     </style>
 }
 
-    <div class="col-xl-3 hidden-sm-down leftSidebar" id="sidebar">
+    <div class="col-xl-3 hidden-sm-down leftSidebar" id="sidebarLeft">
         @*<h4 class="text-success section-heading h4">Bài viết nổi bật</h4>*@
         <div class="row">
             <div class="col-xl-12 mb-1 ">
