--- a/BlogHealth/Views/Shared/_Layout.cshtml
+++ b/BlogHealth/Views/Shared/_Layout.cshtml
@@ -645,8 +645,8 @@
     <script src="~/HomeAsset/js/bootstrap.js"></script>
     <script src="~/HomeAsset/js/mdb.js"></script>
     <script src="~/HomeAsset/js/ResizeSensor.js"></script>
-    <script src="~/HomeAsset/js/theia-sticky-sidebar.js"></script>
-
+    @*<script src="~/HomeAsset/js/theia-sticky-sidebar.js"></script>*@
+    <script src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/210284/stickyfill.js"></script>
     <script src="~/HomeAsset/js/Myscript.js"></script>
     <script>
         $(function () {
